JSAPI-3703: 'Find entrance' button IE fix

--- a/styles/style.ie.less
+++ b/styles/style.ie.less
@@ -60,3 +60,12 @@
         .lightness-panel__version_of_old-api .lightness-panel__progress-bar:before {
             background-image: url('../img/progress-bar-yellow.png');
             }
+
+.pseudocard {
+    }
+    .pseudocard__header {
+        }
+        .pseudocard__find-entrance-link {
+            .rgba(0, 0, 0, 0.2);
+            padding: 5px 10px;
+            }
